--- a/benchmarks/MethodOfLinesPDE/Project.toml
+++ b/benchmarks/MethodOfLinesPDE/Project.toml
@@ -4,4 +4,5 @@ DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 MethodOfLines = "94925ecb-adb7-4558-8ed8-f975c56a0bf4"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+SciMLBenchmarks = "31c91b34-3c75-11e9-0341-95557aab0344"
 Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
